--- a/TillApp/TillApp/TillApp/MainPage.xaml
+++ b/TillApp/TillApp/TillApp/MainPage.xaml
@@ -80,7 +80,7 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Text="Food" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+            <Button Text="Food" Clicked="FoodButton_Clicked" Style="{StaticResource ButtonStyle}" Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
             <Button Text="Drinks" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
         </Grid>
 
