Added Checkout Page, improved navigation between pages

--- a/TillApp/TillApp/TillApp/MainPage.xaml
+++ b/TillApp/TillApp/TillApp/MainPage.xaml
@@ -129,7 +129,7 @@
             </Grid>
             <!-- Stack for Checkout Button -->
             <StackLayout Grid.Row="0" Grid.Column="1">
-                <Button Text="Checkout" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" VerticalOptions="FillAndExpand"/>
+                <Button Text="Checkout" Clicked="CheckoutButton_Clicked" Style="{StaticResource ButtonStyle}" VerticalOptions="FillAndExpand"/>
             </StackLayout>
         </Grid>
     </Grid>
