--- a/TillApp/TillApp/TillApp/MainPage.xaml
+++ b/TillApp/TillApp/TillApp/MainPage.xaml
@@ -61,7 +61,7 @@
                 </Grid.ColumnDefinitions>
                 <!-- Username label & Sign in/Sign out buttons -->
                 <Label x:Name="UserLabel" Text="Username" Style="{StaticResource LabelStyle}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" />
-                <Button Text="Sign In" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="0" />
+                <Button Text="Sign In" Clicked="SignIn" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="0" />
                 <Button Text="Logout" Clicked="Button_OnClicked" Style="{StaticResource ButtonStyle}" Grid.Row="1" Grid.Column="1" />
             </Grid>
             <!-- Total Cost label -->
